--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,3 +46,47 @@ a {
 .bold {
   font-weight: bold;
 }
+
+.background-landscape {
+  height: 100%;
+  max-height: 236px;
+  overflow: hidden;
+  margin-bottom: 2rem;
+  position: relative;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+  }
+}
+
+.image-actors {
+  max-width: 125px;
+
+  height: 100%;
+}
+
+.not-imageavaiable {
+  max-width: 125px;
+
+  height: 100%;
+  background-color: beige;
+}
+
+.underline-p {
+  font-weight: bold;
+}
+
+.card-item {
+  cursor: pointer;
+  border: 0 !important;
+  border-radius: 0 !important;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.card-item:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  transition: all 0.3s ease-in-out;
+}
