add filmographie to actors

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,28 @@ body {
   //   background-color: red;
 }
 
+.col-content-credits {
+  overflow: scroll;
+  height: 80vh;
+}
+
+.modal-content {
+  background-color: rgb(255, 255, 255);
+  border-radius: 0 !important;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 0;
+    h5 {
+      margin: 0;
+    }
+  }
+}
+
 .card-title {
   h6 {
     text-overflow: ellipsis;
